<resources>
    <string name="app_name">GroupProject</string>

    <string name="restaurant_name">Restruante de Franko</string>

    <string name="message_intro">To order items from this restaurant you will first be given a drink
        menu and will order items from this list. Then you hit next to go to the kids menu and order
        items here. You will do the same thing for the adult and dessert menu. Once you are done
        with the dessert menu you will press the calculate bill button.</string>

    <string name="string_proceed_drinks">"Drinks Menu"</string>

    <string name="string_proceed_adults">"Adults Menu"</string>

    <string name="string_proceed_desserts">"Desserts Menu"</string>

    <string name="string_proceed_kids">"Kids Menu"</string>

    <string name="edit_text_string">Enter the name of the item</string>

</resources>
